--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Spanify</title>
     <meta name="description" content="Spanify">
     <link rel="stylesheet" href="design.css">
+    <script src="main.js" defer></script>
 </head>
 <body>
-    <h1>String Spanify</h1>
-    <p class="title">Spanifie le contenue de la chaine</p>
+    <div class="container">
+        <p class="title"><strong>site créer par JOUDRIER KEVIN</strong><br />Voici mon super</p>
+    </div>
 </body>
 </html>
