Modify design css.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="Logo.svg" alt="logo" class="logo">
         <p class="title"><strong>site créer par JOUDRIER KEVIN</strong><br />Voici mon super</p>
     </div>
 </body>
